--- a/src/app/student/student-create/student-create.component.html
+++ b/src/app/student/student-create/student-create.component.html
@@ -62,7 +62,7 @@
                 <select id="forMedium"
                         class="form-select">
                     <option selected>Choose...</option>
-                    <option value="Marathi">Marathi</option>
+                    <option value="Hindi">Hindi</option>
                     <option value="Semi">Semi</option>
                     <option value="CBSE">CBSE</option>
                 </select>
@@ -147,7 +147,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -157,7 +157,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
                 <div class="form-check form-check-inline ">
@@ -166,7 +166,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -176,7 +176,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
                 <div class="form-check form-check-inline ">
@@ -185,7 +185,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -195,7 +195,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
                 <div class="form-check form-check-inline ">
@@ -204,7 +204,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -214,7 +214,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -237,7 +237,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
                 <div class="form-check form-check-inline ">
@@ -246,7 +246,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -256,7 +256,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
                 <div class="form-check form-check-inline ">
@@ -265,7 +265,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -275,7 +275,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
                 <div class="form-check form-check-inline ">
@@ -284,7 +284,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
 
@@ -294,7 +294,7 @@
                                type="checkbox"
                                name="com[]"
                                value="1">
-                        Marathi
+                        Hindi
                     </label>
                 </div>
             </div>
